Kel 88 (#8)
* KEL-85 change definition of endpoint addresses in House Controller and Occupant Controller. Assignment Controller endpoints are not changed for now - but will be redesigned later. Some changes to House Controller and Occupant Controller will follow too. E.g. if I need a getHouseById type of method at some point.

* KEL-86 refactored methods in Controllers as well as changed Response Entities into unprocessableEntity(). As I understood, BadRequest response would be handled automatically by Spring at some point.

* KEL-87 changed the mappers' parameter names to be more general - also changed those names in the corresponding interfaces

* KEL-88 refactored methods from the AssignmentService - removed Optionals from the method parameters wherever possible to follow good practice.